k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dsvpwa
  namespace: dsvpwa
spec:
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: dsvpwa
  template:
    metadata:
      labels:
        app: dsvpwa
    spec:
      containers:
        - name: dsvpwa
          image: ghcr.io/taher-alsaegh/dsvpwa:dev
          command:
            - python
          args:
            - dsvpwa.py
            - --host
            - "0.0.0.0"
            - --port
            - "65413"
          ports:
            - containerPort: 65413
