k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dsvpwa
  namespace: dsvpwa
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - dsvpwa.local
      secretName: dsvpwa-tls
  rules:
    - host: dsvpwa.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dsvpwa
                port:
                  number: 65413
